--- a/Option2_Code/AINT255AliensOptionExpt2/nbproject/project.properties
+++ b/Option2_Code/AINT255AliensOptionExpt2/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=AINT255AliensOption 2
+application.title=AINT255AliensOptionExpt2
 application.vendor=ABC
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -25,7 +25,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/AINT255AliensOption_2.jar
+dist.jar=${dist.dir}/AINT255AliensOptionExpt2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
